Agregar CRUD de Productos y estilos

--- a/admin/style_editar.css
+++ b/admin/style_editar.css
@@ -1,5 +1,5 @@
-/* Contenedor del formulario de edición */
-.edit-user-container {
+/*/* Contenedor del formulario de edición */
+.edit-user-container{
     width: 50%;
     margin: 40px auto;
     padding: 20px;
