--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -78,20 +78,6 @@ body {
     padding: 20px 0;
 }
 
-.sorting {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    margin-bottom: 20px;
-}
-
-.sorting select {
-    padding: 8px;
-    font-size: 14px;
-    border: 1px solid #ccc;
-    margin-right: 10px;
-}
-
 .product-list {
     display: flex;
     flex-wrap: wrap;
@@ -117,6 +103,60 @@ img {
     object-fit: contain; /* Evita distorsión manteniendo proporciones */
     border-radius: 5px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+/* Cuadrícula de productos */
+.products-grid {
+    display: grid;
+    /*grid-template-columns: repeat(3, 1fr);*/
+    grid-template-columns: repeat(auto-fill, minmax(250px, 10fr));
+    gap: 20px;
+    margin-top: 20px;
+}
+
+/* Tarjeta de producto */
+.product-card {
+    background: white;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    transition: transform 0.3s;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.product-card:hover {
+    transform: scale(1.05);
+}
+
+.product-image {
+    width: 100%;
+    height: auto;
+    border-radius: 10px;
+    object-fit: cover; /* Hace que la imagen se ajuste sin deformarse */
+}
+
+/* Nombre y precio del producto */
+.product-name {
+    font-size: 1.2rem;
+    font-weight: bold;
+    margin-top: 15px;
+}
+
+.product-price {
+    font-size: 1rem;
+    color: #007BFF;
+    margin-top: 5px;
+}
+
+/* Descripción del producto */
+.product-description {
+    font-size: 0.9rem;
+    color: #555;
+    margin-top: 10px;
 }
 
 .footer {
@@ -510,16 +550,18 @@ tr:nth-child(even) {
 }
                 /* ==== USUARIOS ==== */
 /* Contenedor del formulario de edición */
-.edit-user-container, .products-container {
-    width: 50%;
-    margin: 40px auto;
-    padding: 20px;
+.edit-user-container {
     background-color: white;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
     text-align: center;
 }
 
+.products-container {
+    width: 90%;
+    margin: 40px auto;
+    text-align: center;
+}
 /* Encabezado */
 .edit-user-container h2 {
     font-size: 22px;
@@ -602,38 +644,7 @@ tr:nth-child(even) {
     color: white;
 }
 
-/* Imagen de productos */
-.products-table img {
-    width: 100px;
-    height: 100px;
-    object-fit: cover;
-    border-radius: 5px;
-}
-
 /* Botones de acción */
-.products-table .btn-edit,
-.products-table .btn-delete {
-    display: inline-block;
-    padding: 8px 15px;
-    margin: 5px;
-    color: white;
-    background-color: #007BFF;
-    text-decoration: none;
-    border-radius: 5px;
-    transition: background-color 0.3s;
-}
-
-.products-table .btn-edit:hover {
-    background-color: #0056b3;
-}
-
-.products-table .btn-delete {
-    background-color: #FF5733;
-}
-
-.products-table .btn-delete:hover {
-    background-color: #C13F20;
-}
 
 /* Botón de Agregar Producto */
 .btn-save {
@@ -650,35 +661,8 @@ tr:nth-child(even) {
     background-color: #0056b3;
 }
 
-/* Tabla de productos */
-.products-table {
-    width: 100%;
-    border-collapse: collapse;
-    margin-top: 20px;
-}
-
-.products-table th, .products-table td {
-    padding: 12px;
-    border: 1px solid #ddd;
-    text-align: left;
-}
-
-.products-table th {
-    background-color: #002b46;
-    color: white;
-}
-
-/* Imagen de productos */
-.products-table img {
-    width: 100px;
-    height: 100px;
-    object-fit: cover;
-    border-radius: 5px;
-}
-
 /* Botones de acción */
-.products-table .btn-edit,
-.products-table .btn-delete {
+.products-table .btn-edit {
     display: inline-block;
     padding: 8px 15px;
     margin: 5px;
@@ -691,14 +675,6 @@ tr:nth-child(even) {
 
 .products-table .btn-edit:hover {
     background-color: #0056b3;
-}
-
-.products-table .btn-delete {
-    background-color: #FF5733;
-}
-
-.products-table .btn-delete:hover {
-    background-color: #C13F20;
 }
 
 /* Botón de Agregar Producto */
@@ -737,3 +713,5 @@ tr:nth-child(even) {
     background-color: #0056b3;
     color: white;
 }
+
+
